--- a/dialog-test/poly.toml
+++ b/dialog-test/poly.toml
@@ -5,6 +5,31 @@ version = "0.1.0"
 [web]
 dir = "web"
 
+[tray]
+enabled = true
+tooltip = "Dialog Test App"
+minimize_to_tray = false
+close_to_tray = true
+
+# Custom tray menu items
+[[tray.menu]]
+id = "show"
+label = "Show Window"
+
+[[tray.menu]]
+id = "separator"
+
+[[tray.menu]]
+id = "about"
+label = "About"
+
+[[tray.menu]]
+id = "separator"
+
+[[tray.menu]]
+id = "quit"
+label = "Exit"
+
 [update]
 enabled = true
 source = "github"
