--- a/poly/Cargo.toml
+++ b/poly/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "poly"
-version = "0.1.5"
+version = "0.2.1"
 edition = "2021"
 description = "Poly - A Python-like dynamic language with multi-runtime interoperability"
 authors = ["Poly Team"]
@@ -24,6 +24,9 @@ tiny_http = "0.12"
 # JSON serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+# Lazy static for global state
+lazy_static = "1.4"
+once_cell = "1.19"
 # Native WebView (like Tauri)
 wry = { version = "0.46", optional = true }
 tao = { version = "0.30", optional = true }
