--- a/poly/Cargo.toml
+++ b/poly/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "poly"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 description = "Poly - A Python-like dynamic language with multi-runtime interoperability"
 authors = ["Poly Team"]
@@ -41,11 +41,16 @@ reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
 semver = { version = "1.0", optional = true }
 zip = { version = "0.6", optional = true }
 self_update = { version = "0.39", optional = true }
+# Hashing for lockfile integrity
+sha2 = { version = "0.10", optional = true }
+# Tarball extraction for npm packages
+flate2 = { version = "1.0", optional = true }
+tar = { version = "0.4", optional = true }
 
 [features]
 default = []
 wasm = ["wasm-bindgen"]
-native = ["wry", "tao", "image", "rfd", "reqwest", "semver", "zip", "self_update", "tray-icon", "muda"]
+native = ["wry", "tao", "image", "rfd", "reqwest", "semver", "zip", "self_update", "tray-icon", "muda", "sha2", "flate2", "tar"]
 
 [lib]
 name = "poly"
