--- a/poly/Cargo.toml
+++ b/poly/Cargo.toml
@@ -48,11 +48,13 @@ flate2 = { version = "1.0", optional = true }
 tar = { version = "0.4", optional = true }
 # Clipboard
 arboard = { version = "3.4", optional = true }
+# Notifications
+notify-rust = { version = "4", optional = true }
 
 [features]
 default = []
 wasm = ["wasm-bindgen"]
-native = ["wry", "tao", "image", "rfd", "reqwest", "semver", "zip", "self_update", "tray-icon", "muda", "sha2", "flate2", "tar", "arboard"]
+native = ["wry", "tao", "image", "rfd", "reqwest", "semver", "zip", "self_update", "tray-icon", "muda", "sha2", "flate2", "tar", "arboard", "notify-rust"]
 
 [lib]
 name = "poly"
