--- a/poly/Cargo.toml
+++ b/poly/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "poly"
-version = "0.2.5"
+version = "0.2.6"
 edition = "2021"
 description = "Poly - A Python-like dynamic language with multi-runtime interoperability"
 authors = ["Poly Team"]
@@ -28,8 +28,9 @@ serde_json = "1.0"
 lazy_static = "1.4"
 once_cell = "1.19"
 # Native WebView (like Tauri)
-wry = { version = "0.46", optional = true }
-tao = { version = "0.30", optional = true }
+wry = { version = "0.50", optional = true }
+tao = { version = "0.32", optional = true }
+winit = { version = "0.30", optional = true }
 image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
 # System tray
 tray-icon = { version = "0.14", optional = true }
@@ -50,11 +51,18 @@ tar = { version = "0.4", optional = true }
 arboard = { version = "3.4", optional = true }
 # Notifications
 notify-rust = { version = "4", optional = true }
+# Windows API for frameless windows
+windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_Controls", "Win32_System_Threading", "Win32_System_LibraryLoader"], optional = true }
+# Raw window handle for WebView
+raw-window-handle = { version = "0.6", optional = true }
+# Window shadows (from Tauri team) for frameless windows
+# Note: Disabled due to raw-window-handle version conflict with tao/wry
+# window-shadows = { version = "0.2", optional = true }
 
 [features]
 default = []
 wasm = ["wasm-bindgen"]
-native = ["wry", "tao", "image", "rfd", "reqwest", "semver", "zip", "self_update", "tray-icon", "muda", "sha2", "flate2", "tar", "arboard", "notify-rust"]
+native = ["wry", "tao", "winit", "image", "rfd", "reqwest", "semver", "zip", "self_update", "tray-icon", "muda", "sha2", "flate2", "tar", "arboard", "notify-rust", "windows", "raw-window-handle"]
 
 [lib]
 name = "poly"
