--- a/poly/Cargo.toml
+++ b/poly/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "poly"
-version = "0.2.6"
+version = "0.2.7"
 edition = "2021"
 description = "Poly - A Python-like dynamic language with multi-runtime interoperability"
 authors = ["Poly Team"]
@@ -52,7 +52,7 @@ arboard = { version = "3.4", optional = true }
 # Notifications
 notify-rust = { version = "4", optional = true }
 # Windows API for frameless windows
-windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_Controls", "Win32_System_Threading", "Win32_System_LibraryLoader"], optional = true }
+windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_Controls", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_System_Console"], optional = true }
 # Raw window handle for WebView
 raw-window-handle = { version = "0.6", optional = true }
 # Window shadows (from Tauri team) for frameless windows
@@ -63,6 +63,8 @@ raw-window-handle = { version = "0.6", optional = true }
 default = []
 wasm = ["wasm-bindgen"]
 native = ["wry", "tao", "winit", "image", "rfd", "reqwest", "semver", "zip", "self_update", "tray-icon", "muda", "sha2", "flate2", "tar", "arboard", "notify-rust", "windows", "raw-window-handle"]
+# GUI mode - hides console window on Windows (used for bundled apps)
+gui = []
 
 [lib]
 name = "poly"
