--- a/poly/Cargo.toml
+++ b/poly/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "poly"
-version = "0.2.9"
+version = "0.3.1"
 edition = "2021"
 description = "Poly - A Python-like dynamic language with multi-runtime interoperability"
 authors = ["Poly Team"]
@@ -23,6 +23,10 @@ notify = "7.0"
 tiny_http = "0.12"
 # URL encoding/decoding
 urlencoding = "2.1"
+# URL parsing
+url = "2.5"
+# HTTP client for proxy
+ureq = "2.9"
 # JSON serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -40,7 +44,7 @@ muda = { version = "0.13", optional = true }
 # Native dialogs
 rfd = { version = "0.15", optional = true }
 # Auto-updater
-reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
+reqwest = { version = "0.11", features = ["blocking", "json"] }
 semver = { version = "1.0", optional = true }
 zip = { version = "0.6", optional = true }
 self_update = { version = "0.39", optional = true }
@@ -49,6 +53,8 @@ sha2 = { version = "0.10", optional = true }
 # Tarball extraction for npm packages
 flate2 = { version = "1.0", optional = true }
 tar = { version = "0.4", optional = true }
+# Regex for pattern matching
+regex = { version = "1.10", optional = true }
 # Clipboard
 arboard = { version = "3.4", optional = true }
 # Notifications
@@ -66,7 +72,7 @@ raw-window-handle = { version = "0.6", optional = true }
 [features]
 default = []
 wasm = ["wasm-bindgen"]
-native = ["wry", "tao", "winit", "image", "rfd", "reqwest", "semver", "zip", "self_update", "tray-icon", "muda", "sha2", "flate2", "tar", "arboard", "notify-rust", "windows", "raw-window-handle", "rusqlite"]
+native = ["wry", "tao", "winit", "image", "rfd", "semver", "zip", "self_update", "tray-icon", "muda", "sha2", "flate2", "tar", "arboard", "notify-rust", "windows", "raw-window-handle", "rusqlite", "regex"]
 # GUI mode - hides console window on Windows (used for bundled apps)
 gui = []
 
